# numlon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: dev-win.ps1  dev.cmd  dev.ps1  dev.sh  release.ps1  setup-mutagen-wsl-dev.ps1
src/: config.rs  gdi_plus.rs  hotkey.rs  keyboard_hook.rs  main.rs  numlock.rs  numlon.exe.manifest  single_instance.rs  startup.rs  updater.rs  wide.rs  win_app.rs
